--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^6.1.1",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.14.2"
   },
   "scripts": {
     "start": "react-scripts start",
